Update Dashboard Student fix Age PieChart bug